# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  makefile
scripts/: compile.bash  compile.bat  configure.bat
src/: Controller.cpp  Controller.hpp  Game.cpp  Game.hpp  GameController.cpp  GameController.hpp  GameOfLife.cpp  GameOfLife.hpp  GameView.cpp  GameView.hpp  View.cpp  View.hpp  main.cpp
